--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.7",
+    "angular-animate": "^1.6.7",
+    "angular-aria": "^1.6.7",
     "angular-material": "^1.1.5",
+    "angular-messages": "^1.6.7",
     "angular-route": "^1.6.7",
     "bootstrap": "^3.3.7"
   },
