--- a/images/package.json
+++ b/images/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "start": "json-server -w db.json & webpack-dev-server",
+    "start": "webpack-dev-server",
     "build": "webpack"
   },
   "author": "",
